--- a/client/style/style.css
+++ b/client/style/style.css
@@ -10,6 +10,16 @@
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 3rem;
 }
-
+#r{
+  overflow-y: scroll;
+  overflow-x: hidden;
+  max-height: 50rem;
+}
+#homeB{
+  position: absolute;
+  left:1em;
+  top:0.5em;
+  font-size:37px;
+}
 
 
