--- a/client/style/style.css
+++ b/client/style/style.css
@@ -12,7 +12,7 @@
 #r{
   overflow-y: scroll;
   overflow-x: hidden;
-  max-height: 37rem;
+  max-height: 80vh;
 }
 /* #homeB{
   position: absolute;
